main page mark-up-1

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             
 
             <div class="result-block">
-                <span id="result">21315165165</span>
+                <span id="result"></span>
             </div>
             
 
