--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.6/dist/css/uikit.min.css" />
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css" /> -->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon1.ico">
 </head>
 </head>
 
@@ -27,7 +28,7 @@
                 <label class="uk-form-label"></label>
                 <div class="uk-form-controls uk-flex">
                     <div class="uk-margin">
-                        <input id="sumCalc" value="1000" class="uk-input uk-form-width-large sum-input" type="number"
+                        <input id="sumCalc" value="0" class="uk-input uk-form-width-large sum-input" type="number"
                             placeholder="">
                     </div>
                     <select class="uk-select uk-form-width-xsmall">
@@ -56,7 +57,7 @@
                     <div class="uk-form-label">Сумма</div>
                     <div class="uk-form-controls">
                         <div class="uk-margin">
-                            <input id="sumAdd" value="100" class="uk-input uk-form-width-medium" type="number"
+                            <input id="sumAdd" value="0" class="uk-input uk-form-width-medium" type="number"
                                 placeholder="">
                         </div>
                     </div>
@@ -87,7 +88,7 @@
                     <div class="uk-form-label">Процент</div>
                     <div class="uk-form-controls">
                         <div class="uk-margin">
-                            <input id="procent" value="5" class="uk-input uk-form-width-medum" type="number"
+                            <input id="procent" value="0" class="uk-input uk-form-width-medum" type="number"
                                 placeholder="">
                         </div>
                     </div>
@@ -116,7 +117,7 @@
             <div>
                 <div class="uk-form-controls">
                     <div class="uk-margin">
-                        <input value="10" class="uk-input years-input" id="colvoYear" type="number" placeholder="">
+                        <input value="0" class="uk-input years-input" id="colvoYear" type="number" placeholder="">
                     </div>
                 </div>
             </div>
@@ -146,7 +147,9 @@
     </div>
 
     <footer>
-        <h2>Footer info</h2>
+        <div class="footer-content">
+            <h2>Footer info</h2>
+        </div>        
     </footer>
 
 
