--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                         <input id="sumCalc" value="0" class="uk-input uk-form-width-large sum-input" type="number"
                             placeholder="">
                     </div>
-                    <select class="uk-select uk-form-width-xsmall">
-                        <option value="">$</option>
-                        <option value="">€</option>
-                        <option value="">£</option>
-                        <option value="">₩</option>
-                        <option value="">¥</option>
-                        <option value="">Ұ</option>
-                        <option value="">元</option>
-                        <option value="">د.إ</option>
-                        <option value="">₹</option>
-                        <option value="">R$</option>
-                        <option value="">฿</option>
-                        <option value="">₽</option>
+                    <select class="uk-select uk-form-width-xsmall" id="valetSelect">
+                        <option value="$">$</option>
+                        <option value="€">€</option>
+                        <option value="£">£</option>
+                        <option value="₩">₩</option>
+                        <option value="¥">¥</option>
+                        <option value="Ұ">Ұ</option>
+                        <option value="元">元</option>
+                        <option value="د.إ">د.إ</option>
+                        <option value="₹">₹</option>
+                        <option value="R$">R$</option>
+                        <option value="฿">฿</option>
+                        <option value="₽">₽</option>
                     </select>
                 </div>
             </div>
@@ -149,7 +149,7 @@
     <footer>
         <div class="footer-content">
             <h2>Footer info</h2>
-        </div>        
+        </div>
     </footer>
 
 
