--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="uk-form-controls uk-flex">
                     <div class="uk-margin">
                         <input id="sumCalc" value="0" class="uk-input uk-form-width-large sum-input" type="number"
-                            placeholder="">
+                            placeholder="" step="1000">
                     </div>
                     <select class="uk-select uk-form-width-xsmall" id="valetSelect">
                         <option value="$">$</option>
@@ -58,7 +58,7 @@
                     <div class="uk-form-controls">
                         <div class="uk-margin">
                             <input id="sumAdd" value="0" class="uk-input uk-form-width-medium" type="number"
-                                placeholder="">
+                                placeholder="" step="100">
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="uk-form-controls">
                         <div class="uk-margin">
                             <input id="procent" value="0" class="uk-input uk-form-width-medum" type="number"
-                                placeholder="">
+                                placeholder="" step="0.25">
                         </div>
                     </div>
                 </div>
