--- a/index.html
+++ b/index.html
@@ -148,7 +148,17 @@
 
     <footer>
         <div class="footer-content">
-            <h2>Footer info</h2>
+            <div class="copyright">
+                <span class="copyright-text"><img src="images/copyright.svg" alt="copyright" width="15" height="15">Noname Ltd., 2022 г. Все права защищены.</span>
+            </div>
+            <div class="links">
+                <a class="uk-link-text uk-margin-medium" href="#">Политика конфиденциальности</a>
+                <a class="uk-link-text uk-margin-medium" href="#">Использование Cookies</a>
+                <a class="uk-link-text uk-margin-medium" href="#">Условия использования</a>
+                <a class="uk-link-text uk-margin-medium" href="#">Продажа и возврат</a>
+                <a class="uk-link-text uk-margin-medium" href="#">Юридическая информация</a>
+                <a class="uk-link-text uk-margin-medium" href="#">Карта сайта</a>
+            </div>
         </div>        
     </footer>
 
