--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <label class="uk-form-label"></label>
                 <div class="uk-form-controls uk-flex">
                     <div class="uk-margin">
-                        <input id="sumCalc" value="0" class="uk-input uk-form-width-large sum-input" type="number"
+                        <input id="sumCalc" placeholder="0" class="uk-input uk-form-width-large sum-input" type="number"
                             placeholder="" min="0" step="1000">
                     </div>
                     <select class="uk-select uk-form-width-xsmall" id="valetSelect">
@@ -57,7 +57,7 @@
                     <div class="uk-form-label">Сумма</div>
                     <div class="uk-form-controls">
                         <div class="uk-margin">
-                            <input id="sumAdd" value="0" class="uk-input uk-form-width-medium" type="number"
+                            <input id="sumAdd" placeholder="0" class="uk-input uk-form-width-medium" type="number"
                                 placeholder="" min="0" step="100">
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                     <div class="uk-form-label">Процент</div>
                     <div class="uk-form-controls">
                         <div class="uk-margin">
-                            <input id="procent" value="0" class="uk-input uk-form-width-medum" type="number"
+                            <input id="procent" placeholder="0" class="uk-input uk-form-width-medum" type="number"
                                 placeholder="" min="0" max="100" step="0.25">
                         </div>
                     </div>
@@ -117,7 +117,7 @@
             <div>
                 <div class="uk-form-controls">
                     <div class="uk-margin">
-                        <input value="0" min="0" class="uk-input years-input" id="colvoYear" type="number"
+                        <input placeholder="0" min="0" class="uk-input years-input" id="colvoYear" type="number"
                             placeholder="">
                     </div>
                 </div>
@@ -140,6 +140,7 @@
 
         <div class="graph content-block">
             <div id="graph">
+
             </div>
         </div>
 
