Добавил текс "Итог"

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
             <div class="result-block">
-                <span id="result"></span>
+                Итог: <span id="result"></span>
             </div>
 
 
