add media query rule

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Калькулятор сложных процентов</h1>
     </header>
 
-    <div class="content uk-flex">
+    <div class="content uk-flex uk-flex-wrap">
         <div class="calculator content-block">
             <legend class="uk-legend">Шаг 1 - Первоначальная сумма <span uk-icon="question"
                     uk-tooltip="Сумма денег, которую вы хотели бы инвестировать"></span></legend>
