--- a/index.html
+++ b/index.html
@@ -139,6 +139,21 @@
         </div>
 
         <div class="graph content-block">
+            <div class="text-center">
+                <p class="fin-sav-bal font-normal">Итоговый баланс</p>
+                <span id="result1"></span>
+                <div class="row">
+                    <div class="hpanel">
+                        <p class="text-big-32 font-bold"><span id="sumCalc1"></p>
+                        <span>Всего пополнений</span>
+                    </div>
+
+                    <div class="hpanel">
+                        <p class="text-big-24-xs font-bold" ><span id="procent1"></span></p>
+                        <span>Всего процентов</span>
+                    </div>
+                </div>
+            </div>
             <div id="graph">
 
             </div>
