add func percent

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                 <span id="result1"></span>
                 <div class="row">
                     <div class="hpanel">
-                        <p class="text-big-32 font-bold"><span id="sumCalc1"></p>
+                        <p class="text-big-32 font-bold"><span id="replenishment"></span></p>
                         <span>Всего пополнений</span>
                     </div>
 
                     <div class="hpanel">
-                        <p class="text-big-24-xs font-bold" ><span id="procent1"></span></p>
+                        <p class="text-big-24-xs font-bold"><span id="percent"></span></p>
                         <span>Всего процентов</span>
                     </div>
                 </div>
