--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 <div class="graph-summary">
                     <p class="fin-sav-bal font-normal">Итоговый баланс</p>
                     <span id="result1"></span>
-                </div>                
-                
+                </div>
+
                 <div class="hpanel graph-summary">
                     <span class="text-big-32 font-bold" id="sumCalc1"></span>
                     <span>Всего пополнений</span>
@@ -154,7 +154,7 @@
                     <span class="text-big-24-xs font-bold" id="procent1"></span>
                     <span>Всего процентов</span>
                 </div>
-                
+
             </div>
             <div id="graph">
 
@@ -163,11 +163,12 @@
 
 
     </div>
-
+    <div id="table"></div>
     <footer>
         <div class="footer-content">
             <div class="copyright">
-                <span class="copyright-text"><img src="images/copyright.svg" alt="copyright" width="15" height="15">Noname Ltd., 2022 г. Все права защищены.</span>
+                <span class="copyright-text"><img src="images/copyright.svg" alt="copyright" width="15"
+                        height="15">Noname Ltd., 2022 г. Все права защищены.</span>
             </div>
             <div class="links">
                 <a class="uk-link-text uk-margin-medium" href="#">Политика конфиденциальности</a>
@@ -177,7 +178,7 @@
                 <a class="uk-link-text uk-margin-medium" href="#">Юридическая информация</a>
                 <a class="uk-link-text uk-margin-medium" href="#">Карта сайта</a>
             </div>
-        </div>        
+        </div>
     </footer>
 
 
