--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
     </div>
-    <div id="table"></div>
+    <div id="table" class="uk-table"></div>
     <footer>
         <div class="footer-content">
             <div class="copyright">
