--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
                 </div>
 
                 <div class="hpanel graph-summary">
-                    <span class="text-big-32 font-bold" id="replenishment"></span>
-                    <span>Всего пополнений</span>
+                    <p class="text-big-32 font-bold">Всего пополнений</p>
+                    <span id="replenishment"></span>
                 </div>
 
                 <div class="hpanel graph-summary">
-                    <span class="text-big-24-xs font-bold" id="percent"></span>
-                    <span>Всего процентов</span>
+                    <p class="text-big-24-xs font-bold">Всего процентов</p>
+                    <span id="percent"></span>
                 </div>
 
             </div>
